--- a/atividade3.html
+++ b/atividade3.html
@@ -14,6 +14,13 @@
         segundo aluno. Mostre as informações de cada aluno no console.
         Mostre também a média do primeiro aluno e a média do segundo
         aluno. Por fim mostre a média desta turma de 2 alunos.
+        
+        const alunos 
+        const mediaAluno1
+        ----  mediaAluno2
+        const mediaTurma = mediaAluno1 + mediaAluno2 / 2 
+        \n é uma string de escape que representa uma quebra de linha no texto
+
     -->
     <script>
       const aluno1 = {
