--- a/atividade2.html
+++ b/atividade2.html
@@ -8,7 +8,20 @@
   </head>
   <body>
     <!-- 
-
+      Crie um objeto em JavaScript para colocar 5 atributos de um
+        notebook. Atribua os seguintes atributos:
+        Processador = i7
+        Memória = 16GB
+        Preço = 5000
+        HD = 1TB
+        SSD = 256GB
+        Por fim, mostre o nome e valor de cada atributo no console,
+        exatamente como está na atividade.
+        
+        const note = { 
+          especificações
+        }
+        print no log exemplo "processador  + note.processador"
     -->
     <script>
       const notebook = {
