--- a/atividade4.html
+++ b/atividade4.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <!--
-
+      Crie cinco objetos JavaScript dentro de um Array contendo
+      nome(texto), idade(número), skills (array), ou seja um total de cinco
+    alunos. Agora crie uma função que receba estes cinco objetos e
+    mais um parâmetro skill. Dependendo da skill enviada mostrar no
+    console.log(), quais alunos têm a skill enviada por parâmetro,
+    mostrar todo o objeto.
+    Exemplo: Pedro, 24, [JavaScript, TypeScript, React]. Se mandar
+    chamar a função enviando (alunos, “JavaScript”), precisa mostrar o
+    Pedro e qual mais se encaixa nessa skill.
+    
+    const alunos
+    importante * function BuscarPorSkills* for let i = 0 i < alunos i ++
+    print no log
     -->
     <script>
       const alunos = [
