--- a/atividade1.html
+++ b/atividade1.html
@@ -7,6 +7,21 @@
     <title>Atividade 1</title>
 </head>
 <body>
+    <p>Link Para atividades 🏆📝</p>
+    <br>
+    <a href="atividade1.html">Atividade1</a> 
+    <br>
+    <br>
+    <a href="atividade2.html">Atividade2</a> 
+    <br>
+    <br>
+    <a href="atividade3.html">Atividade3</a>
+    <br>
+    <br>
+    <a href="atividade4.html">Atividade4</a>
+    <br>
+    <br>
+    <a href="atividade5.html">Atividade5</a>
     <!--
         Crie um objeto em JavaScript para colocar dois atributos de um
         produto. Atribua o preço e descrição do produto com o valor “90” e a
