--- a/atividade3.html
+++ b/atividade3.html
@@ -7,6 +7,21 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Link Para atividades 🏆📝</p>
+    <br />
+    <a href="atividade1.html">Atividade1</a>
+    <br />
+    <br />
+    <a href="atividade2.html">Atividade2</a>
+    <br />
+    <br />
+    <a href="atividade3.html">Atividade3</a>
+    <br />
+    <br />
+    <a href="atividade4.html">Atividade4</a>
+    <br />
+    <br />
+    <a href="atividade5.html">atividade5</a>
     <!--
         Crie um objeto para colocar nome e duas notas. Atribua nome e
         duas notas para o primeiro objeto, que será nosso primeiro aluno.
