--- a/atividade4.html
+++ b/atividade4.html
@@ -7,6 +7,21 @@
     <title>Document</title>
   </head>
   <body>
+    <p>Link Para atividades 🏆📝</p>
+    <br />
+    <a href="atividade1.html">Atividade1</a>
+    <br />
+    <br />
+    <a href="atividade2.html">Atividade2</a>
+    <br />
+    <br />
+    <a href="atividade3.html">Atividade3</a>
+    <br />
+    <br />
+    <a href="atividade4.html">Atividade4</a>
+    <br />
+    <br />
+    <a href="atividade5.html">atividade5</a>
     <!--
       Crie cinco objetos JavaScript dentro de um Array contendo
       nome(texto), idade(número), skills (array), ou seja um total de cinco
